# cropro

./: .gitattributes  .gitignore  .gitmodules  README.md  __init__.py  build.sh  collection_manager.py  common.py  config.json  config.md  config.py  cropro.py  edit_window.py  note_importer.py  note_previewer.py  package.sh  previewer.py  pyproject.toml  remote_search.py  settings_dialog.py  web.py  widgets.py
.github/workflows/: black.yml  make_release.yml
cropro/: __init__.py  collection_manager.py  common.py  config.json  config.md  config.py  cropro.py  debug_log.py  edit_window.py  note_importer.py  remote_search.py  settings_dialog.py
cropro/web/: previewer.css
cropro/widgets/: col_search_opts.py  item_box.py  item_edit.py  main_window_ui.py  note_list.py  note_pages.py  note_previewer.py  remote_search_opts.py  search_bar.py  search_result_label.py  utils.py
run/: mock_config.py  run_col_search_opts.py  run_remote_search.py  run_remote_search_opts.py  run_search_bar.py
scripts/: format.sh
web/: previewer.css  previewer.html  previewer.js
widgets/: __init__.py  col_search_opts.py  combos.py  item_box.py  item_edit.py  labels.py  main_window_ui.py  note_list.py  note_pages.py  note_previewer.py  remote_search_bar.py  remote_search_opts.py  search_bar.py  search_result_label.py  status_bar.py  utils.py
