[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.24",
  "hatch-vcs>=0.4",
]

[project]
name = "cropro"
dynamic = ["version"]
description = 'Automatically generate furigana and other data on Anki cards.'
readme = "README.md"
requires-python = "~=3.9" # anki officially only runs on 3.9
license = { file = "LICENSE" }
keywords = ["ajatt"]
authors = [
  { name = "Ajatt-Tools and contributors" },
  { name = "Ren Tatsumoto", email = "tatsu@autistici.org" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/cropro"
Issues = "https://github.com/Ajatt-Tools/cropro/issues"
Source = "https://github.com/Ajatt-Tools/cropro"

[tool.hatch.version]
source = "vcs"
path = "cropro/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "cropro/__about__.py"

[tool.hatch.envs.dev]
dependencies = [
  "mypy>=1.0.0",
  "isort",
  "pytest",
  "aqt[qt6]",
]
python = "3.9"

[tool.hatch.envs.dev.scripts]
# run as `hatch run dev:scriptname`
check = "mypy --install-types --non-interactive {args:cropro tests}"
test = "pytest"
testv = "pytest -vvv -s"
format = "bash \"$(git rev-parse --show-toplevel)/scripts/format.sh\" "
package = "bash \"$(git rev-parse --show-toplevel)/scripts/package.sh\" "

[tool.coverage.run]
source_pkgs = ["cropro", "tests"]
branch = true
parallel = true
omit = [
  "cropro/__about__.py",
]

[tool.coverage.paths]
cropro = ["cropro", "*/cropro/cropro"]
tests = ["tests", "*/cropro/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
